# wallet_app_api

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs  web_socket.rs  ws.rs
src/end_point/: auth_end_point.rs  chat_end_point.rs  mod.rs  user_end_point.rs
src/models/: base_model.rs  base_response_model.rs  chat_message_model.rs  mod.rs  request_header_model.rs  token_model.rs  user_model.rs
src/repositories/: mod.rs  mongo_repository.rs  user_repository.rs
src/service/: chat_service.rs  mod.rs  user_service.rs
src/utils/: constants.rs  helper.rs  mod.rs  routes.rs  status_code.rs  string.rs
